--- a/src/styles.css
+++ b/src/styles.css
@@ -1,21 +1,29 @@
-* {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-html, body {
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
   margin: 0;
-  border: 0;
-  padding: 0;
-  background-color: #fff;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-
-main {
-  margin: auto;
-  width: 50%;
-  padding: 20px;
+input, #output {
+  width: 600px;
+  height: 50px;
+  margin: 10px 0;
+  padding: 10px;
+  font-size: 18px;
+  background-color: #f0f0f0;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border: 1px solid #ccc;
+  border-radius: 4px;
 }
-
-main > h1 {
-  text-align: center;
-  font-size: 3.5em;
+button {
+  padding: 10px;
+  font-size: 18px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
